@@ -9,7 +9,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class MemFileStroageRecordImpl implements IFileStroageRecord {
 
@@ -29,12 +28,7 @@ public class MemFileStroageRecordImpl implements IFileStroageRecord {
 
     @Override
     public List<FileInfo> list(FileInfo fileInfo) {
-        return fileInfos.stream()
-                .filter(e -> !StringUtils.hasLength(fileInfo.getId()) || fileInfo.getId().equals(e.getId()))
-                .filter(e -> !StringUtils.hasLength(fileInfo.getPlatform()) || fileInfo.getPlatform().equals(e.getPlatform()))
-                .filter(e -> !StringUtils.hasLength(fileInfo.getAlias()) || fileInfo.getAlias().contains(e.getAlias()))
-                .filter(e -> !StringUtils.hasLength(fileInfo.getOriginalFilename()) || fileInfo.getOriginalFilename().contains(e.getOriginalFilename()))
-                .collect(Collectors.toList());
+        return fileInfos.stream().filter(e -> !StringUtils.hasLength(fileInfo.getId()) || fileInfo.getId().equals(e.getId())).filter(e -> !StringUtils.hasLength(fileInfo.getPlatform()) || fileInfo.getPlatform().equals(e.getPlatform())).filter(e -> !StringUtils.hasLength(fileInfo.getAlias()) || fileInfo.getAlias().contains(e.getAlias())).filter(e -> !StringUtils.hasLength(fileInfo.getOriginalFilename()) || fileInfo.getOriginalFilename().contains(e.getOriginalFilename())).toList();
     }
 
     @Override
@@ -50,7 +44,5 @@ public class MemFileStroageRecordImpl implements IFileStroageRecord {
     }
 
     @Override
-    public void init() {
-
-    }
+    public void init() {}
 }
